fixing vote range from 1 to 5 t o 0 to 5 + adding wrapping on books in main page

--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,7 @@ header {
   width: 100%;
   height: 80px;
 }
+
 header img {
   width: 60px;
 }
@@ -152,7 +153,8 @@ footer {
   display: flex;
   align-items: center;
   justify-content: center;
-  perspective: 600px; /* Definisce la prospettiva 3D */
+  perspective: 600px;
+  /* Definisce la prospettiva 3D */
   position: relative;
 }
 
@@ -160,16 +162,20 @@ footer {
   0% {
     transform: rotateY(0deg);
   }
+
   100% {
     transform: rotateY(-30deg);
   }
 }
 
 .book {
+  display: flex;
+  flex-wrap: wrap;
   width: 200px;
   height: 300px;
   position: relative;
-  transform-style: preserve-3d; /* Permette l'effetto 3D */
+  transform-style: preserve-3d;
+  /* Permette l'effetto 3D */
   transform: rotateY(-30deg);
   transition: 1s ease;
   animation: 1s ease 0s 1 initAnimation;
@@ -181,7 +187,7 @@ footer {
 }
 
 /* Front of the book */
-.book > :first-child {
+.book> :first-child {
   position: absolute;
   top: 0;
   left: 0;
@@ -203,30 +209,28 @@ footer {
   width: 43px;
   height: 298px;
   transform: translateX(176.5px) rotateY(90deg);
-  background: linear-gradient(
-    90deg,
-    #fff 0%,
-    #f9f9f9 5%,
-    #fff 10%,
-    #f9f9f9 15%,
-    #fff 20%,
-    #f9f9f9 25%,
-    #fff 30%,
-    #f9f9f9 35%,
-    #fff 40%,
-    #f9f9f9 45%,
-    #fff 50%,
-    #f9f9f9 55%,
-    #fff 60%,
-    #f9f9f9 65%,
-    #fff 70%,
-    #f9f9f9 75%,
-    #fff 80%,
-    #f9f9f9 85%,
-    #fff 90%,
-    #f9f9f9 95%,
-    #fff 100%
-  );
+  background: linear-gradient(90deg,
+      #fff 0%,
+      #f9f9f9 5%,
+      #fff 10%,
+      #f9f9f9 15%,
+      #fff 20%,
+      #f9f9f9 25%,
+      #fff 30%,
+      #f9f9f9 35%,
+      #fff 40%,
+      #f9f9f9 45%,
+      #fff 50%,
+      #f9f9f9 55%,
+      #fff 60%,
+      #f9f9f9 65%,
+      #fff 70%,
+      #f9f9f9 75%,
+      #fff 80%,
+      #f9f9f9 85%,
+      #fff 90%,
+      #f9f9f9 95%,
+      #fff 100%);
 }
 
 /* Back of the book */
@@ -243,7 +247,7 @@ footer {
   box-shadow: -10px 0 10px 10px #161616;
 }
 
-.book > img {
+.book>img {
   position: relative !important;
   top: 0 !important;
   left: 0 !important;
